# GridSentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  pyproject.toml  railway.json
.github/workflows/: deploy-railway.yml  deploy-vercel.yml  test.yml
api_runtime/data/predict/: latest_window.parquet
api_runtime/data/synthetic/: events.parquet  fleet.parquet
data/powerbi/: GridSentinel.pbit  GridSentinel.pq  README.md  measures.dax
data/tableau/: GridSentinel.twbx  README.md  calculated_fields.txt  schema.json
docs/: architecture.md
src/gridsentinel/: cli.py
src/gridsentinel/bi/: pbit.py  twbx.py  twbx_hyper.py
src/gridsentinel/correlation/: correlate.py  dedupe.py
src/gridsentinel/dashboard/: app.py
src/gridsentinel/forecast/: capacity.py  utilization.py
src/gridsentinel/ingest/: dcgm.py  otel.py  prometheus.py  telemetry.py  tickets.py
src/gridsentinel/kpi/: efficiency.py  sla.py
src/gridsentinel/powerbi/: export.py
src/gridsentinel/predict/: anomaly.py  benchmark.py  calibrated.py  deep_baseline.py  drift.py  features.py  model.py  registry.py  score.py  survival.py  tracking.py  ts_features.py
tests/: test_correlation.py  test_deep_baseline.py  test_energy.py  test_forecast.py  test_industry_grade.py  test_kpi.py  test_predict.py  test_real_ingest.py  test_reporting.py  test_rootcause.py  test_serving.py  test_topology.py
web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: LiveDashboard.tsx  LiveStatus.tsx
(+24 files in other folders)
