[project]
name = "gridsentinel"
version = "0.1.0"
description = "GPU data center operations intelligence: simulate, correlate, forecast, report."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "pydantic>=2.6",
    "scikit-learn>=1.4",
    "hdbscan>=0.8.33",
    "statsmodels>=0.14",
    "streamlit>=1.32",
    "altair>=5.2",
    "rich>=13.7",
    "typer>=0.12",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10", "ipykernel>=6.29"]
llm = ["anthropic>=0.40", "python-dotenv>=1.0"]
ml = ["lifelines>=0.30", "mlflow>=2.18", "shap>=0.46"]

[project.scripts]
gridsentinel = "gridsentinel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gridsentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"
